GEOS-4287
git-svn-id: http://svn.codehaus.org/geoserver/trunk/src@15226 ef1d6e69-97e5-0310-af46-8a06194da32a

Former-commit-id: b621d0bb9f634f6a967238942ff527552b730239 [formerly 0306b59b042b9016c5541f1ad378094c3cc70983]
Former-commit-id: b0c008adbc5dcae867d0a59544466baa0f42c735